<resources>
    <string name="app_name">Meal Mate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="signupwithemail">Sign Up With Email</string>
    <string name="continuewithgoogle">Continue with Google</string>
    <string name="alreadyhaveanaccountloginin">Already Have An Account? Login In</string>
    <string name="loginin"> Login In</string>
    <string name="signup"> Sign Up</string>
    <string name="orusesocialsignup">or use social signup</string>
    <string name="name_hint">Name</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="orusesociallogin">or use social login</string>
    <string name="loginwithgoogle">Login With Google</string>
    <string name="image_description">Back Ground</string>
    <string name="meal_image">Home Slider Image</string>

    <string name="client_id">860340410088-v9rra57fibagr5gr0isnei5gg15o5puc.apps.googleusercontent.com</string>
    <string name="loading">Loading</string>
    <string name="meal_of_the_day">" Meal of the day"</string>

    <string name="profile_image">" Profile Image"</string>
    <string name="profile">Profile\n</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="skip">Skip</string>


    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favoritemeals">Favorites</string>
    <string name="addplanmeal">Add Y Plan</string>">
    <string name="planmeals">Plan Meals</string>
    <string name="fillter_by_ingredients">Filter By Ingredients</string>
    <string name="most_popular_categories">Most Popular Categories</string>
    <string name="all_meals">Meals</string>
    <string name="categories">Categories</string>
    <string name="area">Area</string>
    <string name="ingredients">Ingredients</string>
    <string name="filter_by">Filter By</string>
    <string name="meal_name">Meal Name</string>
    <string name="see_more">See More</string>
    <string name="fillter_by_area">Filter By Area</string>
    <string name="header_title">Header Title</string>
    <string name="suggestion_title">Suggestion Title</string>
    <string name="icon_description">Icon Description</string>
    <string name="directions">Directions</string>
    <string name="add_to_favourites">ADD TO FAVOURITES</string>
    <string name="add_to_plan">ADD TO PLAN</string>
    <string name="category">Category</string>
    <string name="categorie">Categorie</string>
    <string name="your_favorite_meals">Your Favorite Meals</string>
    <string name="delete_from_favorites">Delete</string>
    <string name="back">Back</string>


    <!-- Food type strings -->
    <string name="food_type_breakfast">Breakfast</string>
    <string name="food_type_lunch">Lunch</string>
    <string name="food_type_dinner">Dinner</string>
    <string name="food_type_snack">Snack</string>
    <string name="select_meal_type">Select Meal Type</string>
    <string name="your_plan_meals">Your Plan Meals</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="select_meal_type1">Select Meal Type</string>
    <string name="please_enter_all_required_data_before_proceeding">Please enter all required data before proceeding.</string>
    <string name="incomplete_data">Incomplete Data</string>
    <string name="ok">OK</string>
    <string name="showdata">"showData: "</string>
    <string name="arguments_are_null_or_empty">Arguments are null or empty</string>
    <string name="meal_added_to_favorites">Meal added to favorites</string>
    <string name="meal_is_null">Meal is null</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
    <string name="delete_your_meals_from_favorites">Delete your meals from favorites.</string>
    <string name="wait_are_you_sure">Wait!Are You Sure</string>
    <string name="back_to_home">Back To Home</string>
    <string name="add_your_meals_to_favorites_first">Add your meals to favorites first.</string>
    <string name="no_data_found">No Data Found</string>
    <string name="logged_out">Logged out</string>
    <string name="sign_up_for_more_features">Sign Up for More Features</string>
    <string name="add_your_food_preferences_plan_your_meals_and_more">Add your food preferences ,plan your meals and more!</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_to_personalize_your_recipe_feed">Sign up to personalize your recipe feed</string>
    <string name="get_started">GET STARTED</string>
    <string name="open_internet_connection_for_more_features">Open Internet Connection for More Features</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="you_need_an_internet_connection_to_proceed_or_stay_on_offline_mode">You need an internet connection to proceed or stay on offline mode.</string>
    <string name="internet_connection_restored">Internet Connection Restored</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="login_failed">"Login Failed: "</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="please_enter_a_valid_password">Please enter a valid password</string>
    <string name="google_sign_in_failed">"Google Sign-In failed: "</string>
    <string name="sign_in_successful">Sign-In successful</string>
    <string name="sign_in_failed">"Sign-In failed: "</string>
    <string name="delete_your_meals_from_plans">Delete your meals from plans.</string>
    <string name="add_your_meals_to_plan_first">Add your meals to Plan first.</string>
    <string name="sign_up_successfully">Sign Up Successfully</string>
    <string name="sign_up_failed">"Sign Up Failed: "</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="you_ll_miss_out_on_personalized_content_and_saving_our_delicious_recipes">You\'ll miss out on personalized content and saving our delicious recipes.</string>
    <string name="i_m_sure">I\'m Sure</string>
    <string name="no_go_back">No, Go Back</string>
    <string name="backup_success">Backup Success</string>
    <string name="restore_success">Restore Success</string>
    <string name="you_need_an_internet_connection_to_proceed_the_app_will_now_close">You need an internet connection to proceed. The app will now close.</string>
    <string name="user_data_saved_successfully">User Data Saved Successfully</string>
    <string name="user_data_save_failed">User Data Saved Failed</string>
    <string name="previous_week">Previous Week</string>
    <string name="nextweek">Next Week</string>
    <string name="added_to_your_plans">Added To Your Plans</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="no">NO</string>

    <!-- String array for meal types -->
    <string-array name="meal_types">
        <item> Select Meal Type</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>

    <!-- String array for days of the week -->
    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

</resources>