<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">


    <ImageView
        android:id="@+id/blurredImagesignupView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/signupscreenbackground"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-38dp" />

    <TextView
        android:id="@+id/textViewsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="138dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:fadeScrollbars="true"
        android:padding="10dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/blurredImagesignupView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/blurredImagesignupView"
        app:layout_constraintTop_toTopOf="@+id/blurredImagesignupView" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/border_edit_text"
        android:hint="@string/name_hint"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewsignup"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="@+id/textViewsignup"
        app:layout_constraintTop_toBottomOf="@+id/textViewsignup" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_edit_text"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/name_input"
        app:layout_constraintStart_toStartOf="@+id/name_input"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_edit_text"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/email_input"
        app:layout_constraintStart_toStartOf="@+id/email_input"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_edit_text"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/password_input"
        app:layout_constraintStart_toStartOf="@+id/password_input"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/startScreenBackgroundColor"
        android:paddingLeft="117dp"
        android:paddingTop="15dp"
        android:paddingRight="117dp"
        android:paddingBottom="15dp"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password_input"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_input"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_input" />

</androidx.constraintlayout.widget.ConstraintLayout>
