<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YourFragmentOrActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/all_Meal_detil_ViewPager"
                android:layout_width="match_parent"
                android:layout_height="347dp"
                android:background="@color/Marigold" />

            <TextView
                android:id="@+id/all_Meal_detil_meal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/border_edit_text_version_4"
                android:padding="15dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/all_Meal_detil_meal_day1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:padding="15dp"
                android:text="@string/day"
                android:textSize="25dp"
                android:visibility="gone"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/all_Meal_detil_meal_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:visibility="gone"
                android:text="TextView"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/all_Meal_detil_meal_dateandtime1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:visibility="gone"
                android:text="@string/time"
                android:textSize="25dp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/all_Meal_detil_meal_dateandtime"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="TextView"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:padding="15dp"
                android:text="@string/categorie"
                android:textSize="25dp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/all_Meal_detil_meal_categorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="TextView"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/area"
                android:textSize="25dp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/all_Meal_detil_meal_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="TextView"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="15dp"
                android:text="@string/ingredients"
                android:textSize="25dp"
                android:textStyle="bold|italic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/all_Meal_detil_mealIngredients_recyclerView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="20dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="15dp"
                android:text="@string/directions"
                android:textSize="25dp"
                android:textStyle="bold|italic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/all_Meal_detil_mealDirections_recyclerView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="20dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/add_to_Fav_button2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/add_to_favourites"
            app:icon="@drawable/ic_baseline_favorite_24" />

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/back" />


        <Button
            android:id="@+id/add_to_plan_button3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/add_to_plan"
            app:icon="@drawable/mealplane" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>