<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/search_meal_card_view_color"
        android:padding="8dp"
        app:cardCornerRadius="70dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/meal_name"
                android:layout_width="356dp"
                android:layout_height="51dp"
                android:layout_marginTop="16dp"
                android:padding="10dp"
                android:text="@string/meal_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/meal_category"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/card_backgroundversion_3"
                android:padding="10dp"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/meal_area" />

            <TextView
                android:id="@+id/meal_area"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/card_backgroundversion_3"
                android:padding="10dp"
                android:text="@string/area"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mealImage" />

            <Button
                android:id="@+id/seeMorebutton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/search_meal_card_view_color"
                android:padding="10dp"
                android:text="@string/see_more"
                android:textAlignment="center"
                android:textColor="@color/white"

                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/deletebutton"
                app:layout_constraintTop_toBottomOf="@+id/meal_category"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/deletebutton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/search_meal_card_view_color"
                android:padding="10dp"
                android:text="@string/delete_from_favorites"
                android:textAlignment="center"

                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toStartOf="@+id/seeMorebutton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/meal_category"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/mealImage"
                android:layout_width="292dp"
                android:layout_height="178dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/card_backgroundversion_3"
                android:contentDescription="@string/meal_image"
                app:layout_constraintEnd_toEndOf="@+id/meal_name"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/meal_name"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.RoundedImageView"
                app:srcCompat="@drawable/loading" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
