<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".veiw.start_fragment.StartFragment">

    <!-- ImageView as background -->
    <ImageView
        android:id="@+id/blurredImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/startscreenbacground" />

    <!-- CardView on top of the ImageView -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:padding="8dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_top_corners">

            <Button
                android:id="@+id/signupwithemailBTU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="104dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/black"
                android:paddingLeft="75dp"
                android:paddingTop="15dp"
                android:paddingRight="75dp"
                android:paddingBottom="15dp"
                android:text="@string/signupwithemail"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continuewithgoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:paddingLeft="50dp"
                android:paddingTop="15dp"
                android:paddingRight="50dp"
                android:paddingBottom="15dp"
                android:text="@string/continuewithgoogle"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:cornerRadius="10dp"
                app:icon="@drawable/googellogo"
                app:iconGravity="textStart"
                app:iconSize="20dp"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:background="@color/startScreenBackgroundColor"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/orusesocialsignup"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupwithemailBTU" />

            <TextView
                android:id="@+id/alreadyhaveanaccountloginin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="117dp"
                android:padding="10dp"
                android:text="@string/alreadyhaveanaccountloginin"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/continuewithgoogle"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBUTtransparent"
        android:text="@string/skip"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

</androidx.constraintlayout.widget.ConstraintLayout>
